replace default graph on startup for the new UI

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -73,6 +73,9 @@ COPY --chmod=755 replaceDefaultGraph.py /replaceDefaultGraph.py
 # Run the Python script
 RUN python3 /replaceDefaultGraph.py
 
+# Overwrite the default.json file in ComfyUI\web\templates\default.json for the new UI
+COPY --chmod=644 defaultGraph.json /ComfyUI/web/templates/default.json
+
 # Add Jupyter Notebook
 RUN pip3 install jupyterlab
 EXPOSE 8888
