include facerestore_models

--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -24,9 +24,6 @@ RUN wget -O /ComfyUI/models/xlabs/loras/Xlabs-AI_flux-RealismLora.safetensors "h
 # To include then in the docker image we need to download them manually and copy them to a folder called facerestore_models
 # I'm not sure where to download them from, I just copied them from and existing installation
 # Check if the directory exists and copy its contents if it does
-RUN if [ -d "facerestore_models" ]; then \
-    mkdir -p /ComfyUI/models/facerestore_models && \
-    cp -r facerestore_models/* /ComfyUI/models/facerestore_models/; \
-    fi
+COPY facerestore_models /ComfyUI/models/facerestore_models/
 
 CMD [ "/start.sh" ]
