--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -97,6 +97,9 @@ COPY --chmod=755 download_ALL.sh /download_ALL.sh
 COPY --chmod=755 make_venv.sh /make_venv.sh
 COPY --chmod=755 download_Files.sh /download_Files.sh
 COPY --chmod=755 download_wan2.1.sh /download_wan2.1.sh
+COPY --chmod=755 download_wan2.2.sh /download_wan2.2.sh
+COPY --chmod=755 download_wan2.2_InfiniteTalk.sh /download_wan2.2_InfiniteTalk.sh
+COPY --chmod=755 download_Qwen.sh /download_Qwen.sh
 COPY --chmod=755 disable_mixlab.sh /disable_mixlab.sh
 
 # SUPIR Upscale
