include vibevoice download script in dockerfile

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -103,6 +103,7 @@ COPY --chmod=755 download_wan2.2.sh /download_wan2.2.sh
 COPY --chmod=755 download_wan2.2_InfiniteTalk.sh /download_wan2.2_InfiniteTalk.sh
 COPY --chmod=755 download_Qwen_bf16.sh /download_Qwen_bf16.sh
 COPY --chmod=755 download_Qwen_fp8.sh /download_Qwen_fp8.sh
+COPY --chmod=755 download_VibeVoice.sh /download_VibeVoice.sh
 COPY --chmod=755 disable_mixlab.sh /disable_mixlab.sh
 
 # SUPIR Upscale
